<resources>
    <string name="app_name">万颗商城</string>
    <string name="str_main_home">首页</string>
    <string name="str_main_unit">拼团</string>
    <string name="str_main_shoppingcart">购物车</string>
    <string name="str_main_mine">我的</string>

    <string name="str_loading">请稍后</string>
    <string name="str_login_phone_format_error">手机号格式不正确</string>
    <string name="str_login_password_error">密码不能为空</string>
    <string name="str_register_seek_pass">验证通过</string>
    <string name="str_register_time_count">%1$dS后</string>
    <string name="str_register_code_sent">验证码已发送</string>
    <string name="str_register_send_code">发送验证码</string>
    <string name="str_register_hint_input_code">请输入验证码</string>
    <string name="str_register">注册</string>
    <string name="str_register_input_pwd_hint">请输入至少6位密码</string>
    <string name="str_register_success">注册成功</string>
    <string name="str_edit_pwd_success">密码修改成功</string>
    <string name="str_save">保存</string>
    <string name="str_input_pwd_agin">请再次输入密码</string>
    <string name="str_forget_pwd">忘记密码</string>
    <string name="str_submit">提交</string>
    <string name="str_hint_old_phone">请输入原手机号</string>
    <string name="str_pwd_for_error">密码格式不正确</string>
    <string name="str_sms_not_null">验证码不能为空</string>
    <string name="str_phone_not_unit">两次手机号码不一致</string>
    <string name="str_agree_user_protocol">请同意用户协议，然后进行用户注册</string>
    <string name="str_agree">同意</string>
    <string name="str_tag_user_protocol">《万科商城用户使用协议》</string>
    <string name="str_hint_input_phone">请输入手机号</string>
    <string name="str_checkout">立即验证</string>
    <string name="str_personal_information">个人信息</string>
    <string name="str_setting">设置</string>
    <string name="str_about">关于我们</string>
    <string name="str_perfect_user_info">完善个人信息</string>
    <string name="str_choose_date">请选择生日</string>
    <string name="str_not_input">未填写</string>
    <string name="str_male">男</string>
    <string name="str_female">女</string>
    <string name="str_modify_mobile">修改手机号</string>
    <string name="str_input_phone_old">请输入当前手机号</string>
    <string name="str_next_step">下一步</string>
    <string name="str_input_mobile_new">请输入新手机号</string>
    <string name="str_send_verifycode_by_old">(为当前使用的手机号发送验证码)</string>
    <string name="str_address_manage">地址管理</string>
    <string name="str_no_data">暂无数据</string>
    <string name="str_add_address">添加收货地址</string>
    <string name="str_choose_address">选择地址</string>
    <string name="str_receipt_name_not_null">收货人姓名不能为空</string>
    <string name="str_receipt_phone_not_null">收货人电话号码不能为空</string>
    <string name="str_receipt_address_not_null">收货人地址乡镇、街道不能为空</string>
    <string name="str_receipt_extra_address_not_null">收货人详细地址不能为空</string>
    <string name="str_add_success">添加成功</string>
    <string name="str_delete_sure">确定删除吗?</string>
    <string name="str_cancel">取消</string>
    <string name="str_ok">确定</string>
    <string name="str_edit_address">编辑收货地址</string>
    <string name="str_email_format_error">请输入正确的邮箱</string>
    <string name="str_idcard_format_error">请输入正确的二代身份证号</string>
    <string name="str_temp1">技术支持:甘肃云创意科技有限公司</string>
    <string name="str_temp2">联系我们</string>
    <string name="str_temp3">E-mail:xxw0701@sina.com</string>
    <string name="str_temp4">Phone:188&#8211;0944&#8211;6038</string>
    <string name="str_receipt_name">收货人:</string>
    <string name="str_hint_receipt_name">收货人姓名</string>
    <string name="str_contact_way">联系方式:</string>
    <string name="str_hint_contact_phone">收货人电话号码</string>
    <string name="str_choose_contact">选联系人</string>
    <string name="str_area">所在地区:</string>
    <string name="srt_address">详细地址:</string>
    <string name="str_hint_street">详细地址、楼排号等</string>
    <string name="str_postcode">邮政编码:</string>
    <string name="str_hint_postcode">邮政编码</string>
    <string name="str_set_default_address">设为默认收货地址</string>
    <string name="str_hint_input_mobile">请输入手机号</string>
    <string name="str_hint_input_pwd">请输入密码</string>
    <string name="str_login">登录</string>
    <string name="str_register_new_account">注册新账号</string>
    <string name="str_forget_pwd_ask">忘记密码?</string>
    <string name="str_username">用户名</string>
    <string name="str_hint_username">请输入用户名</string>
    <string name="str_realname">真实姓名</string>
    <string name="str_hint_realname">请输入真实姓名</string>
    <string name="str_birth">生日</string>
    <string name="str_gender">性别</string>
    <string name="str_email">邮箱</string>
    <string name="str_hint_email">请输入邮箱</string>
    <string name="str_mobile">手机</string>
    <string name="str_idcard">身份证号</string>
    <string name="str_hint_idcard">请输入身份证号</string>
    <string name="str_push_msg">推送消息</string>
    <string name="str_app_cache">应用缓存</string>
    <string name="str_click_clear_cache">(点击可以清空缓存)</string>
    <string name="str_app_version">版本信息</string>
    <string name="str_about_me">关于我们</string>
    <string name="str_logout">退出账号</string>
    <string name="str_user_center">个人中心</string>
    <string name="str_orders">订单</string>
    <string name="str_all_order">全部订单</string>
    <string name="str_wait_send">待收货</string>
    <string name="str_already_send">已发货</string>
    <string name="str_change_send">退 货</string>
    <string name="str_money">资金</string>
    <string name="str_money_top">余额:¥</string>
    <string name="str_records">记录</string>
    <string name="str_withdraw">提现</string>
    <string name="str_recharge">充值</string>
    <string name="str_mine">我的</string>
    <string name="str_shop_collect">店铺收藏</string>
    <string name="str_good_collect">商品收藏</string>
    <string name="str_public_service">官方客服</string>
    <string name="str_help_center">帮助中心</string>
    <string name="str_money_record">资金记录</string>
    <string name="str_my_collect_goods">我收藏的商品</string>
    <string name="str_my_collect_shop">我收藏的店铺</string>
    <string name="str_trans_date">交易日期</string>
    <string name="str_success">成功</string>
    <string name="str_trans_wait">等待受理</string>
    <string name="str_trans_failed">失败</string>
    <string name="str_card_color">车牌颜色</string>
    <string name="str_apply_logistics">申请成为物流小二</string>
    <string name="str_apply_logistics_upload">(标有“可传”字样的属于选择性操作，如果拥有该项证书，请上传)</string>
    <string name="str_scan">扫一扫</string>
    <string name="str_scan_result">扫描结果</string>
    <string name="str_bind_mobile">绑定手机号</string>
    <string name="str_set_pwd">密码设置</string>
    <string name="str_choose_location_area">请选择所在地区</string>
    <string name="str_account_info_complete">账户信息完善</string>
    <string name="str_hint_six_pwd">请输入6位以上密码</string>
    <string name="str_area2">所在地区</string>
    <string name="str_rmb_character">¥:%.2f</string>
    <string name="str_sale_count">销量:%1$s</string>
    <string name="str_goods_detail">商品详情</string>
    <string name="str_add_new_address">添加新地址</string>
    <string name="str_min_number_send">起送</string>
    <string name="str_number_limit_min">%1$s%2$s起送</string>
    <string name="str_number_limit_max">不超过%1$s</string>
    <string name="str_shop_car_total_price">总计：¥%.2f</string>
    <string name="str_edit">编辑</string>
    <string name="str_complete">完成</string>
    <string name="str_make_order_now">去结算(%1$d)</string>
    <string name="str_delete_shop_car_item_content">此操作不可逆,确定删除这%1$d件商品吗?</string>
    <string name="str_delete">删除</string>
    <string name="str_fill_order">填写订单</string>
    <string name="str_pat_order">支付订单</string>
    <string name="str_shop">店铺</string>
    <string name="str_not_send">未发货</string>
    <string name="str_send">已发货</string>
    <string name="str_number_unit_price">共 %1$d 件，金额:¥%2$.2f</string>
    <string name="str_enter_receive">确定收货</string>
    <string name="str_context_seller">联系卖家</string>
    <string name="str_go_pay">去支付</string>
    <string name="str_cancel_order">取消订单</string>
    <string name="str_re_buy">再次购买</string>
    <string name="str_return_goods">申请退货</string>
    <string name="str_return_goods_success">已退货</string>
    <string name="str_no_order">暂时没有订单</string>
    <string name="str_order_detail">订单详情</string>
    <string name="str_delete_order">删除订单</string>
    <string name="str_completed">已完成</string>
    <string name="str_returning">退货中</string>
    <string name="str_cancel_collect">取消收藏</string>
    <string name="str_collect">收藏店铺</string>
    <string name="str_wechat_bind">已绑定(%1$s)</string>
    <string name="str_wechat_not_bind">未绑定，点击进行绑定</string>
    <string name="str_bind_wechat">提现微信账户</string>
    <string name="str_unbind_wx">解除绑定</string>
    <string name="str_delay_receive">延长收货</string>
    <string name="str_apply_back_money">申请退款</string>
    <string name="str_apply_back_goods">申请退货</string>
    <string name="str_gift_info">促销</string>
    <string name="str_return_hints">(如有赠品，也需要退回)</string>
    <string name="str_shop_gift">促销赠送(免费)</string>
    <string name="str_number">数量</string>
    <string name="str_applied">已申请退款</string>
    <string name="str_applying">退款中</string>
    <string name="str_refund_success">退款完成</string>
    <string name="str_available_money">当前可提现金额:</string>
    <string name="str_apply_withdraw">申请提现</string>
    <string name="str_hint_apply_withdraw">请输入金额</string>
    <string name="str_now_withdraw">立即申请</string>
    <string name="str_pay_result">支付结果</string>
    <string name="str_pay_success">支付成功</string>
    <string name="str_look_orders">查看订单</string>
    <string name="str_sop_name_label">店铺名称</string>
    <string name="str_input_shop_name_hint">请输入店铺名称</string>
</resources>
