<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="addressModal"
            type="com.cloudcreativity.wankeshop.userCenter.address.EditAddressModal" />
        <variable
            name="address"
            type="com.cloudcreativity.wankeshop.entity.AddressEntity" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:elevation="3dip"
            android:layout_width="match_parent"
            android:layout_height="@dimen/action_bar"
            android:background="@color/colorPrimary">
            <TextView
                android:textSize="@dimen/action_bar_font_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textColor="@color/white"
                android:text="@string/str_edit_address"/>
            <android.support.v7.widget.AppCompatImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:onClick="@{(view)->addressModal.onBack(view)}"
                android:src="@drawable/ic_arrow_back_white_24dp"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:background="@drawable/shape_bottom_line_gray"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/str_receipt_name" />
                        <EditText
                            android:inputType="text"
                            android:id="@+id/et_editAddress_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/str_hint_receipt_name"
                            android:text="@{address.receiptName}"
                            android:background="@null"
                            android:padding="7dp" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:background="@drawable/shape_bottom_line_gray"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/str_contact_way" />
                        <EditText
                            android:id="@+id/et_editAddress_phone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/str_hint_contact_phone"
                            android:inputType="phone"
                            android:text="@{address.receiptMobile}"
                            android:padding="7dp"
                            android:background="@null" />
                    </LinearLayout>
                </LinearLayout>
                <FrameLayout
                    android:id="@+id/fl_editAddress_chooseContact"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:onClick="@{(view)->addressModal.openContact(view)}"
                    android:background="@drawable/shape_bottom_line_gray">
                    <TextView
                        android:layout_gravity="center"
                        android:drawableTop="@mipmap/ic_address_add_contact"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="10dp"
                        android:padding="10dp"
                        android:gravity="center"
                        android:text="@string/str_choose_contact"/>
                </FrameLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:background="@drawable/shape_bottom_line_gray"
                android:onClick="@{(view)->addressModal.skipChooseAddress(view)}"
                android:padding="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_area" />
                <TextView
                    android:id="@+id/tv_editAddress_address"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="7dp"
                    android:ellipsize="end"
                    android:text="@{address.formatAddress2()}"
                    android:layout_weight="1"/>
                <ImageView
                    android:contentDescription="@string/app_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_keyboard_arrow_right_black_24dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:background="@drawable/shape_bottom_line_gray"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/srt_address" />
                <EditText
                    android:id="@+id/et_editAddress_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:inputType="text"
                    android:padding="7dp"
                    android:text="@{address.addressInfo}"
                    android:hint="@string/str_hint_street" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:background="@drawable/shape_bottom_line_gray"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_postcode" />
                <EditText
                    android:id="@+id/et_editAddress_postcode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:inputType="number"
                    android:padding="7dp"
                    android:maxLength="5"
                    android:text="@{address.zipCode}"
                    android:hint="@string/str_hint_postcode" />
            </LinearLayout>
            <CheckBox
                android:id="@+id/cb_editAddress_isDefault"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_set_default_address"
                android:paddingStart="5dp"
                android:textSize="14sp"
                android:layout_margin="10dp"
                android:textColor="@color/gray_717171"
                android:checked="@{address.isDefault==0? false : true}"
                android:button="@drawable/selector_checkbox_user_protocol"/>
        </LinearLayout>
        <android.support.v7.widget.AppCompatButton
            android:onClick="@{(view)->addressModal.onSave(view)}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_save"
            android:background="@drawable/ripple_red_btn_3corner"
            android:textColor="@color/white"
            android:layout_margin="20dp"
            android:textSize="14sp"/>
    </LinearLayout>
</layout>