<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="forgetModal"
            type="com.cloudcreativity.wankeshop.loginAndRegister.ForgetModal" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/action_bar"
            android:elevation="3dip"
            android:background="@color/colorPrimary">
            <TextView
                android:textSize="@dimen/action_bar_font_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textColor="@color/white"
                android:text="@string/str_forget_pwd"/>
            <android.support.v7.widget.AppCompatImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:onClick="@{(view)->forgetModal.onBackClick(view)}"
                android:src="@drawable/ic_arrow_back_white_24dp"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white"
            android:padding="15dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <EditText
                    android:id="@+id/et_forgetPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_input_bottom_line"
                    android:padding="7dp"
                    android:textSize="14sp"
                    android:textColor="@color/gray_717171"
                    android:inputType="phone"
                    android:hint="@string/str_hint_old_phone" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="bottom"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">
                    <EditText
                        android:id="@+id/et_forgetVerifyCode"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:background="@drawable/shape_input_bottom_line"
                        android:padding="7dp"
                        android:textColor="@color/gray_717171"
                        android:inputType="number"
                        android:hint="@string/str_register_hint_input_code"
                        android:textSize="14sp" />
                    <TextView
                        android:id="@+id/tv_forgetSend"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/ripple_red_btn_3corner"
                        android:padding="7dp"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:gravity="center"
                        android:onClick="@{(view)->forgetModal.onSendClick(view)}"
                        android:text="@string/str_register_send_code" />
                </LinearLayout>
                <EditText
                    android:id="@+id/et_forgetPassword"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:background="@drawable/shape_input_bottom_line"
                    android:padding="7dp"
                    android:textColor="@color/gray_717171"
                    android:inputType="textPassword"
                    android:hint="@string/str_register_input_pwd_hint" />
                <EditText
                    android:id="@+id/et_forgetPassword2"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:inputType="textPassword"
                    android:textColor="@color/gray_717171"
                    android:background="@drawable/shape_input_bottom_line"
                    android:padding="7dp"
                    android:hint="@string/str_input_pwd_agin"
                    tools:ignore="LabelFor" />
            </LinearLayout>
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_forgetModify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_submit"
                android:layout_marginTop="20dp"
                android:background="@drawable/ripple_red_btn_3corner"
                android:textSize="16sp"
                android:onClick="@{(view)->forgetModal.onSubmitClick(view)}"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>
</layout>