<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="stepTwo"
            type="com.cloudcreativity.wankeshop.userCenter.ModifyMobileModal.StepTwoModal" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        android:padding="15dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <EditText
                android:id="@+id/et_modifyPhoneNew"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:inputType="phone"
                android:background="@drawable/shape_input_bottom_line"
                android:padding="7dp"
                android:hint="@string/str_input_mobile_new" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/et_modifyVerifyCodeNew"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@drawable/shape_input_bottom_line"
                    android:padding="7dp"
                    android:inputType="number"
                    android:hint="@string/str_register_hint_input_code"
                    android:textSize="14sp" />
                <TextView
                    android:onClick="@{(view)->stepTwo.onSendClick(view)}"
                    android:id="@+id/tv_modifyCodeSend"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/ripple_red_btn_3corner"
                    android:padding="7dp"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:gravity="center"
                    android:text="@string/str_register_send_code" />
            </LinearLayout>
        </LinearLayout>
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_modifyMobileSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_submit"
            android:layout_marginTop="20dp"
            android:background="@drawable/ripple_red_btn_3corner"
            android:textSize="16sp"
            android:onClick="@{(view)->stepTwo.onNext(view)}"
            android:textColor="@color/white" />
    </LinearLayout>
</layout>