<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

        <data>
            <variable
                name="stepOne"
                type="com.cloudcreativity.wankeshop.userCenter.ModifyMobileModal.StepOneModal" />
        </data>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white"
            android:padding="15dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="bottom"
                    android:orientation="horizontal">
                    <EditText
                        android:id="@+id/et_modifyVerifyCodeOld"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:background="@drawable/shape_input_bottom_line"
                        android:padding="7dp"
                        android:inputType="number"
                        android:hint="@string/str_register_hint_input_code"
                        android:textSize="14sp" />
                    <TextView
                        android:onClick="@{(view)->stepOne.onSendClick(view)}"
                        android:id="@+id/tv_modifyCodeSend"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/ripple_red_btn_3corner"
                        android:padding="7dp"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:gravity="center"
                        android:text="@string/str_register_send_code" />
                </LinearLayout>
                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/str_send_verifycode_by_old"
                    android:textColor="@color/gray_919191"
                    />
            </LinearLayout>
            <android.support.v7.widget.AppCompatButton
                android:onClick="@{(view)->stepOne.onNext(view)}"
                android:id="@+id/btn_modifyMobileNext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_next_step"
                android:layout_marginTop="20dp"
                android:background="@drawable/ripple_red_btn_3corner"
                android:textSize="16sp"
                android:textColor="@color/white" />
        </LinearLayout>
</layout>